test/fail/import03.v3
//@execute 0=!NullCheckException
//@run 0=M
//@defined A .text.virgil.base, A .data.virgil.base, T main, U c_add
import "" component C {
	"c_add" def add(x: int, y: int) -> int;
}
def main(x: int) -> int {
	return C.add(33, 44);
}
